[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "id_working_days"
version = "1.0.0"
authors = [
  { name="Irsyad Damlis", email="irsyad.damlis@gmail.com" },
]
description = "A library to calculate Indonesian working days with holiday extensions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "holidays",
]

[tool.setuptools.packages.find]
where = ["src"]
